--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -5,5 +5,10 @@
   <%= @event.name %>
 </p>
 
+<p>
+  <strong>Eventdate:</strong>
+  <%= @event.eventdate %>
+</p>
+
 <%= link_to 'Edit', edit_event_path(@event) %> |
 <%= link_to 'Back', events_path %>
