--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -16,6 +16,11 @@
     <%= form.text_area :name %>
   </div>
 
+  <div class="field">
+    <%= form.label :eventdate %>
+    <%= form.datetime_select :eventdate %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
