--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,6 +8,9 @@
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
+  <div><%= f.label :name %><br />
+        <%= f.text_field :name, autofocus: true, autocomplete: "name" %></div>
+
   <div class="field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
