--- a/app/views/onepage/index.html.erb
+++ b/app/views/onepage/index.html.erb
@@ -1,3 +1,9 @@
 <h1>Onepage#index</h1>
 <p>Find me in app/views/onepage/index.html.erb</p>
+<%# p current_user %>
+<%= content_tag :div,
+  id: "currentuser",
+  data: current_user.to_json do %>
+<% end %>
+
 <%= javascript_pack_tag 'hello_react' %>
