--- a/app/views/onepage/index.html.erb
+++ b/app/views/onepage/index.html.erb
@@ -6,4 +6,10 @@
   data: current_user.to_json do %>
 <% end %>
 
+<%= content_tag :div,
+  id: "allusers",
+  display: "none",
+  data: @users.to_json do %>
+<% end %>
+
 <%= javascript_pack_tag 'hello_react' %>
