Added Moment, added matched person to dashboard. Logic for admin of evnet to see matched list

--- a/app/views/onepage/index.html.erb
+++ b/app/views/onepage/index.html.erb
@@ -23,4 +23,9 @@
   data: @pastevents.to_json do %>
 <% end %>
 
+<%= content_tag :div,
+  id: "matchedperson",
+  data: @current_user.sent_matches.to_json do %>
+<% end %>
+
 <%= javascript_pack_tag 'hello_react' %>
