--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,36 @@
   </head>
 
   <body>
+
+  		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			  <a class="navbar-brand" href="#">Navbar w/ text</a>
+			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+			    <span class="navbar-toggler-icon"></span>
+			  </button>
+			  <div class="collapse navbar-collapse" id="navbarText">
+			    <ul class="navbar-nav mr-auto">
+			      <li class="nav-item active">
+			        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+			      </li>
+			      <li class="nav-item">
+			        <a class="nav-link" href="#"></a>
+			      </li>
+			      <li class="nav-item">
+			        <a class="nav-link" href="#"></a>
+			      </li>
+			    </ul>
+			    <span class="navbar-text">
+			      <ul class="navbar-nav mr-auto">
+			      	<li class="nav-item">
+			      		<a class="nav-link" href="/users/sign_in">Login</a>
+			      	</li>
+			      	<li class="nav-item">
+			      		<%= link_to 'Logout', destroy_user_session_url, method: :delete, class: 'nav-link' %>
+			      	</li>
+			      </ul>
+			    </span>
+			  </div>
+			</nav>
     <%= yield %>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
