--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,13 +13,13 @@
   <body>
 
   		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			  <a class="navbar-brand" href="#">Navbar w/ text</a>
+			  <a class="navbar-brand" href="#">Secret Santa</a>
 			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
 			    <span class="navbar-toggler-icon"></span>
 			  </button>
 			  <div class="collapse navbar-collapse" id="navbarText">
 			    <ul class="navbar-nav mr-auto">
-			      <li class="nav-item active">
+			      <li class="nav-item">
 			        <a class="nav-link" href="/">Home</span></a>
 			      </li>
 			      <li class="nav-item">
@@ -31,12 +31,15 @@
 			    </ul>
 			    <span class="navbar-text">
 			      <ul class="navbar-nav mr-auto">
-			      	<li class="nav-item">
-			      		<a class="nav-link" href="/users/sign_in">Login</a>
-			      	</li>
-			      	<li class="nav-item">
+			      	<% if user_signed_in? %>
+						    <li class="nav-item">
 			      		<%= link_to 'Logout', destroy_user_session_url, method: :delete, class: 'nav-link' %>
-			      	</li>
+				      	</li>
+							  <% else %>
+							    <li class="nav-item">
+				      		<%= link_to 'Login', new_user_session_path, class: 'nav-link' %>
+				      	</li>
+						  <% end %>
 			      </ul>
 			    </span>
 			  </div>
