centered create evnet button. Have a main page to understand the app that leads to sign up

--- a/app/assets/stylesheets/onepage.scss
+++ b/app/assets/stylesheets/onepage.scss
@@ -8,6 +8,11 @@
    justify-content: space-around;
 }
 
+.createeventbtndiv {
+	display: flex;
+	justify-content: center;
+}
+
 body{
 	background: lightblue url(asset_path("backgroundimg.jpg"));
 }
