--- a/app/assets/stylesheets/onepage.scss
+++ b/app/assets/stylesheets/onepage.scss
@@ -16,3 +16,23 @@
 body{
 	background: lightblue url(asset_path("backgroundimg.jpg"));
 }
+
+
+.hero-image {
+  background-image: url("https://images.unsplash.com/photo-1513885535751-8b9238bd345a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
+  background-color: #cccccc;
+  height: 500px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #145314;
+}
