--- a/app/views/onepage/index.html.erb
+++ b/app/views/onepage/index.html.erb
@@ -3,7 +3,13 @@
 <% else %>
 
 
-  <div class="content lp-top-cont">
+  <div class="maincontent">
+  	<div class="hero-image">
+  		<div class="hero-text">
+		    <h1 style="font-size:50px">Undercover Santa</h1>
+		  </div>
+
+    </div>
     <section id="home">
 	      <div class="home-content">
           <h3>Simplify your secret santa</h3>
@@ -15,9 +21,7 @@
         </div>
         <%= link_to 'Sign Up', new_user_registration_path, class: 'btn btn-outline-primary' %>
     </section>
-    <aside>
-      <img src="https://images.unsplash.com/photo-1513885535751-8b9238bd345a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80"/>
-    </aside>
+
   </div>
 
 <% end %>
