--- a/app/assets/stylesheets/onepage.scss
+++ b/app/assets/stylesheets/onepage.scss
@@ -8,6 +8,7 @@
    justify-content: space-around;
 }
 
+
 .createeventbtndiv {
 	display: flex;
 	justify-content: center;
@@ -35,4 +36,10 @@ body{
   left: 50%;
   transform: translate(-50%, -50%);
   color: #145314;
+}
+
+#home{
+	display: flex;
+	justify-content: center;
+	text-align: center;
 }
